# docsrs-mcp

./: .gitignore  Architecture.md  CROSS_CRATE_SEARCH_DEBUG_LOG.md  Cargo.toml  Claude.md  LICENSE  PRD.md  README.md  ResearchFindings.json  TRAIT_RESOLUTION_PROGRESS.md  Tasks.json  TemporaryPlan.md  UsefulInformation.json  VersionDocumentationAnalysis.md  analyze_tokens.py  debug_extraction.py  debug_paths_cache.py  debug_trait_extraction.py  full_test.py  import_profile_after_lazy.txt  import_profile_baseline.txt  pyproject.toml  root_cause_fix_implementation_sketch.json  simple_test.py  stdlib_documentation_fix_plan.json  stdlib_root_cause_fix_sketch.json  test_bug8_fix.py  test_categories_fix.py  test_comprehensive.py  test_cross_crate_fix.py  test_debug.py  test_direct_ingestion.py  test_enhanced_macros.py  test_example_search.py  test_extract.py  test_fallback.py  test_fix.py  test_fixes.py  test_fresh_ingestion.py  test_fuzzy_fix.py  (+35 more)
.claude/: .gitattributes  Makefile  README.md  SETUP.md  settings.json  setup-hooks.sh
.claude/agents/: code-linter-formatter.md  codebase-analyzer.md  living-memory-analyzer.md  living-memory-updater.md  plan-writer.md  websearch.md
.claude/commands/: add-feature-to-task.md  create-plan.md  debug-feature.md  human-in-the-loop.md  initialize-PRD.md  initialize-existing.md  revise-plan.md
.claude/hooks/: notification_workflow_guide.py  post_command_bugfix.py  post_edit_docs.py  post_edit_lint.py  post_search_research.py  pre_compact_memory_saver.py  pre_mcp_enforcer.py  prompt_workflow_validator.py  session_start_workflow.py  stop_documentation.py  subagent_stop_filter.py
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
extractors/: __init__.py  enhanced_macro_extractor.py  source_extractor.py
src/docsrs_mcp/: README.md  __init__.py  app.py  batch_processor.py  cache.py  cargo.py  change_analyzer.py  cli.py  config.py  database.py  dependency_filter.py  endpoints.py  endpoints_tools.py  fuzzy_resolver.py  ingest.py  mcp_runner.py  mcp_sdk_server.py  mcp_server.py  mcp_tools_config.py  memory_utils.py  middleware.py  models.py  monitoring.py  parallel_validation.py  popular_crates.py  rustup_detector.py  server.py  utils.py  validation.py  (+1 more)
test/: Cargo.toml
test_crate/: Cargo.toml
tests/: __init__.py  conftest.py  test_app.py  test_background_ingestion_fixes.py  test_batch_processor.py  test_cargo.py  test_character_fragmentation_regression.py  test_cross_reference_service.py  test_cross_references.py  test_cross_references_integration.py  test_enhanced_validation.py  test_filter_integration.py  test_filter_optimizations.py  test_filter_validators.py  test_fuzzy_integration.py  test_fuzzy_resolver.py  test_impl_blocks.json  test_import_regression.py  test_ingest.py  test_integration.py  test_metadata_extraction.py  test_phase6_integration.py  test_popular_crates.py  test_popular_crates_integration.py  test_pre_ingestion_scheduler_fix.py  test_query_preprocessing.py  test_ranking.py  test_ranking_diversification.py  test_reexport_discovery.py  test_reexport_integration.py  test_request_validation.py  test_token_efficiency.py  test_version_diff.py  test_workflow_service.py
(+52 files in other folders)
